crates/ruma-events/tests/it/ui/12-no-relates_to.stderr
error: To generate an event content without relation, the event content type needs to be a struct with a field named `relates_to`. Disable this by removing the `without_relation` attribute
 --> tests/it/ui/12-no-relates_to.rs:6:48
  |
6 | #[derive(Clone, Debug, Deserialize, Serialize, EventContent)]
  |                                                ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EventContent` (in Nightly builds, run with -Z macro-backtrace for more info)
